Addressing the issue where the layers panel would migrate behind the style panel.

--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -86,11 +86,18 @@
   white-space: nowrap;
 }
 
-.style .section-container {
-  min-height: 34rem;
+.style {
+  min-height: 3rem;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 
-.style .section-container.closed {
+.style .section-container {
+  min-height: 32rem;
+  max-height: 32rem; // This keeps the panel from increasing the height of the style panel as additional elements are added
+}
+
+.style .section-container__closed {
   min-height: none;
   display: none;
 }
